# zitadel-tui

./: .dockerignore  .gitignore  .markdownlint-cli2.yaml  .rubocop.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  apps.yml.example  docker-compose.yaml  lefthook.yml  release-please-config.json  renovate.json  zensical.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  release-please.yml
.jules/: bolt.md  sentinel.md
designs/: tui-layout-sketches.html
docs/superpowers/plans/: 2026-03-26-oidc-device-login.md
lib/zitadel_tui/: app.rb  client.rb  config.rb  version.rb
lib/zitadel_tui/commands/: apps.rb  idp.rb  users.rb
scripts/: validate_commit_msg.sh
site_docs/: authentication.md  configuration.md  docker.md  index.md  installation.md  oidc-apps.md
spec/: examples.txt
spec/zitadel_tui/: client_security_spec.rb  client_spec.rb  config_spec.rb
src/: auth.rs  cli.rs  client.rs  conductor.rs  config.rs  main.rs  oidc.rs  output.rs  test_support.rs  token_cache.rs  tui.rs  tui_runtime.rs
src/auth/: mod.rs  resolver.rs  service_account.rs  session.rs
src/commands/: apps.rs  auth.rs  config.rs  idps.rs  mod.rs  shared.rs  users.rs
src/conductor/: forms.rs  helpers.rs  mod.rs  mutations.rs  records.rs  runtime.rs  support.rs  tests.rs
src/tui/: copy.rs  mod.rs  render.rs  state.rs  tests.rs  types.rs  widgets.rs
