[package]
name = "zitadel-tui"
version = "0.1.1"
edition = "2021"
description = "A terminal UI for managing Zitadel resources"
license = "MIT"
repository = "https://github.com/damacus/zitadel-tui"
homepage = "https://github.com/damacus/zitadel-tui"
keywords = ["zitadel", "tui", "terminal", "oauth", "identity"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "6.0"
jsonwebtoken = { version = "10", features = ["rust_crypto", "use_pem"] }
ratatui = "0.30"
reqwest = { version = "0.13", features = ["form", "json", "rustls"], default-features = false }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "1"

[dev-dependencies]
mockito = "1"
